--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="dev_activity_name">Exponent Dev</string>
   <string name="preference_file_key">host.exp.exponent.SharedPreferences</string>
   <string name="error_header">Something went wrong.</string>
-  <string name="error_default_client">Sorry about that. You can go back to Expo home or try to reload the Experience.</string>
+  <string name="error_default_client">Sorry about that. You can go back to Expo home or try to reload the project.</string>
   <string name="error_default_shell">Sorry about that. Press the reload button to try again.</string>
   <string name="error_unable_to_load_experience">Unable to load Experience.</string>
   <string name="error_uncaught">Uncaught Error: %s</string>
